# PET

./: .gitignore  load_dicom.py
FdgPet/: LICENSE  Project.toml  README.md  fdgpettrace.jl
FdgPet/src/: Bids.jl  FdgPet.jl  bids.jl
PetProcessing/: Project.toml  requirements.txt  stevens_process.md
PetProcessing/registration/: pyproject.toml
PetProcessing/src/: PetProcessing.jl  bids.jl  fetchscans.jl  jsoncode.sh  process_pet copy 3.jl  process_pet copy.jl  process_pet.jl  rglob.jl  tarex.jl  tartozip.sh  utils.jl
PetProcessing/test/: runtests.jl
pet-py/: LICENSE.txt  README.md  pyproject.toml
pet-py/resources/: param27.txt
pet-py/src/pet_py/: __about__.py  __init__.py  analysis.py  data.py  registration.py  util.py
pet-py/tests/: __init__.py  run.py  test_one.py
preprocessing/: CLEANFDGDATA.jl  Manifest.toml  Project.toml
voxelwise/voxelwise_matlab_clustcorr/: prepareAnalysis.sh
voxelwise/voxelwise_matlab_clustcorr/scripts/: chunk4DNifti.R  chunk4DNifti_slurm_template.sh  chunk4DNifti_vwReg_slurm_template.sh  chunkProcJobArray_novwReg_accre.sh  chunkProcJobArray_novwReg_local.sh  chunkProcJobArray_vwReg.sh  chunkProcJobArray_vwReg_local.sh  chunkProc_novwReg.R  chunkProc_vwReg.R  getSPMStats.m  reconstructImgFromModelChunks.R  reconstructImgFromModelChunks_slurm_template.sh  restructureSliceChunkToVolumeChunk.R  restructureSliceChunkToVolumeChunk_slurm_template.sh
voxelwise/voxelwise_matlab_clustcorr/scripts/old/: chunkProcJobArray_novwReg_local_down.sh  chunkProcJobArray_novwReg_local_reverse.sh  chunkProcJobArray_novwReg_local_up.sh  groupProc3.py  old_chunkProc_vmReg.R  reconstructImgFromModelChunks_old_noresidfix.R
voxelwise/voxelwise_randomise_tfce_clustcorr/randomise/: call_randomise.sh  cbf_ab42_randomise.R  cbf_ptau_randomise.R  fslRandomiseParallelSlurm_v2.sh  randomise_prep.py
voxelwise/voxelwise_randomise_tfce_clustcorr/randomise/old/: cbf_exec_randomise.R  cbf_ptau_randomise.R
